# realtime-blog-backend

./: .env.podman  .gitignore  Cargo.toml  Dockerfile  README.md  gdb-entitlement.xml  notes.md  podman-compose.deps.yml  podman-compose.dev.yml  podman-compose.yml  podman-entrypoint.sh  test_comment_notification.sh  test_websocket.sh
scripts/: init_db.sh  seed_data.sql  seed_db.sh  setup_db.sh
src/: api_doc.rs  controller.rs  main.rs  schema_ext.rs
src/analytics/: controller.rs  model.rs  service.rs
src/auth/: controller.rs  jwt.rs  middleware.rs  mod.rs  service.rs
src/cache/: redis.rs
src/comment/: controller.rs  mod.rs  model.rs  service.rs
src/db/: mod.rs  populate_recommendations.sql  schema.sql
src/notification/: model.rs  service.rs
src/post/: controller.rs  mod.rs  model.rs  service.rs
src/recommendations/: controller.rs  mod.rs  model.rs  service.rs
src/routes/: analytics.rs  auth.rs  comments.rs  health.rs  mod.rs  notifications.rs  posts.rs  recommendations.rs  users.rs
src/websocket/: notifications.rs
