[package]
name = "realtime-blog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum + Tokio
axum = { version = "0.6", features = ["headers", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# JSON & Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Cache
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "json", "bigdecimal"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.29.1", features = ["tokio-comp", "aio", "connection-manager"] }

# Auth (Optional, future-ready)
jsonwebtoken = "8.3"
argon2 = "0.5"
rand = "0.9.0"

# Swagger / OpenAPI
utoipa = "3.5.0"
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

# WebSocket
futures = "0.3"

# Utility
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Added from the code block
thiserror = "1.0"
html-escape = "0.2.13"

dotenv = "0.15"

[dev-dependencies]
mockall = "0.11.4"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["json"] }